<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="signinviewmodel"
            type="com.example.coronago.ui.SignInViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/coronaLogo"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="40dp"
                    android:src="@drawable/io" />

                <TextView
                    android:id="@+id/sign_in_to_continue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/coronaLogo"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/sign_in_to_continue"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="28sp" />

                <LinearLayout
                    android:id="@+id/email_pass_ly"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sign_in_to_continue"
                    android:layout_marginTop="80dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/e_mail_address" />

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@={signinviewmodel.email}" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/password" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:text="@={signinviewmodel.password}" />

                    <TextView
                        android:id="@+id/errorTextview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColor="#b20000" />
                </LinearLayout>

                <Button
                    android:id="@+id/signInPasswordButton"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/email_pass_ly"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="60dp"
                    android:background="@drawable/bg_signin_button"
                    android:onClick="@{signinviewmodel::onSignInPasswordClick}"
                    android:text="@string/sign_in_with_password"
                    android:textColor="@color/colorAccent" />

                <Button
                    android:id="@+id/signInFaceButton"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/email_pass_ly"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="130dp"
                    android:background="@drawable/bg_signin_button"
                    android:text="@string/sign_in_with_face_id"
                    android:textColor="@color/colorAccent" />

            </RelativeLayout>

            <ProgressBar
                android:id="@+id/sign_in_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal|center_vertical"
                android:visibility="invisible" />
        </RelativeLayout>

    </ScrollView>

</layout>